# xiaopi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build-deps.sh  capture.c  init-build-env.sh  raspios_install.sh  rtsp_streamer.cc
bsp/meta-piipcam/: README.md
bsp/meta-piipcam/conf/: bblayers.conf.sample  layer.conf  local.conf.sample
bsp/meta-piipcam/recipes-connectivity/hostapd/: hostapd_2.8.bbappend
bsp/meta-piipcam/recipes-connectivity/hostapd/files/: hostapd.conf  hostapd.service
bsp/meta-piipcam/recipes-connectivity/wpa-supplicant/: wpa-supplicant_%.bbappend
bsp/meta-piipcam/recipes-connectivity/wpa-supplicant/files/: defconfig  wpa_supplicant.service
bsp/meta-piipcam/recipes-images/main/: main.bb
bsp/meta-piipcam/recipes-images/main/files/: main
bsp/meta-piipcam/recipes-images/main/files/src/: CMakeLists.txt
bsp/meta-piipcam/recipes-images/main/files/src/network/: CMakeLists.txt  network_manager.cc  network_manager.h  wifi_event_observer.h  wifi_interface.cc  wifi_softap.h
bsp/meta-piipcam/recipes-images/main/files/src/rest/: CMakeLists.txt  account_router.h  file_router.cc  network_router.cc  system_router.h
bsp/meta-piipcam/recipes-images/main/files/src/system/: system_manager.cc  system_manager_unittest.cc
bsp/meta-piipcam/recipes-images/main/files/src/utility/: parser.cc  utility.h  utility_unittest.cc
bsp/meta-piipcam/recipes-images/piipcam/: base-files_%.bbappend  ipcam-conf_0.1.bb  piipcam_0.1.bb
bsp/meta-piipcam/recipes-initscript/initscript/files/: rc.local
bsp/meta-piipcam/recipes-multimedia/capture/: capture.bb
bsp/meta-piipcam/recipes-multimedia/capture/files/src/: Makefile  capture.c
bsp/meta-piipcam/recipes-multimedia/live555/files/: 0001-Force-to-30-fps.patch
bsp/meta-piipcam/recipes-multimedia/rtsp-server/: rtsp-server.bb
bsp/meta-piipcam/recipes-multimedia/rtsp-server/files/: capture  capture.service  rtsp-server  rtsp-server.service
bsp/meta-piipcam/recipes-multimedia/rtsp-server/files/src/: Makefile
bsp/meta-piipcam/recipes-support/dnsmasq/: dnsmasq_2.80.bbappend
bsp/meta-piipcam/recipes-support/dnsmasq/files/: dnsmasq.conf
bsp/meta-xiaopi/: README.md
bsp/meta-xiaopi/conf/: bblayers.conf.sample  local.conf.sample
bsp/meta-xiaopi/recipes-bsp/u-boot/: u-boot_%.bbappend
bsp/meta-xiaopi/recipes-bsp/u-boot/files/: bootdelay.patch
bsp/meta-xiaopi/recipes-connectivity/hostapd/: hostapd_%.bbappend
bsp/meta-xiaopi/recipes-connectivity/hostapd/files/: hostapd.conf  hostapd.service
bsp/meta-xiaopi/recipes-connectivity/paho-mqtt-c/: paho-mqtt-c_%.bbappend
bsp/meta-xiaopi/recipes-images/main/: main.bb
bsp/meta-xiaopi/recipes-images/main/files/: main.service
bsp/meta-xiaopi/recipes-images/main/files/xiaopi/ca/: mqtts-ca.crt
bsp/meta-xiaopi/recipes-images/watchdog/: watchdog.bb
bsp/meta-xiaopi/recipes-images/watchdog/files/: init.service
bsp/meta-xiaopi/recipes-images/watchdog/files/src/: Makefile  main.c
bsp/meta-xiaopi/recipes-images/xiaopi/: base-files_%.bbappend  xiaopi_0.1.bb
bsp/meta-xiaopi/recipes-images/xiaopi/files/: wlan0.network
bsp/meta-xiaopi/recipes-initscript/initscript/: initscript.bb
bsp/meta-xiaopi/recipes-initscript/initscript/files/: S01modules  S10partition  S20network  S60rtsp  S99main  S99watchdog  initscript.service
bsp/meta-xiaopi/recipes-multimedia/capture/files/src/: Makefile
bsp/meta-xiaopi/recipes-multimedia/live555/: live555_%.bbappend
bsp/meta-xiaopi/recipes-multimedia/pear/: pear.bb
bsp/meta-xiaopi/recipes-multimedia/pear/files/: srtp.patch  version.patch
bsp/meta-xiaopi/recipes-multimedia/rtsp-server/files/src/: rtsp-server.cc
bsp/meta-xiaopi/recipes-support/dnsmasq/files/: dnsmasq.conf
bsp/meta-xiaopi/recipes-support/libnice/: libnice_0.1.18.bb
bsp/meta-xiaopi/recipes-support/libnice/files/: meson.patch
bsp/meta-xiaopi/recipes-support/librtp/: librtp.bb
bsp/meta-xiaopi/recipes-support/librtp/files/: gccmk.patch
bsp/meta-xiaopi/recipes-support/libsrtp/: libsrtp.bb
bsp/meta-xiaopi/recipes-support/mp4v2/: mp4v2.bb
bsp/meta-xiaopi/recipes-support/pistache/: pistache.bb
src/: CMakeLists.txt  main.cc
src/detection/: CMakeLists.txt  detection.cc  detection.h  face_detector.cc  face_detector.h  motion.cc  motion.h
src/hal/: CMakeLists.txt  capturer.cc  capturer.h  mmal_capturer.cc  mmal_capturer.h  queue.h  stream_receiver.cc  stream_receiver.h
src/media/: CMakeLists.txt  recorder.cc  recorder.h  rtsp_server.cc  rtsp_server.h
src/network/: CMakeLists.txt  network_manager.cc  network_manager.h  network_manager_unittest.cc  wifi_interface.cc  wifi_interface.h  wifi_softap.cc  wifi_softap.h  wifi_station.cc  wifi_station.h
src/rest/: CMakeLists.txt  account_router.cc  api_endpoint.cc  api_endpoint.h  file_router.cc  file_router.h  network_router.cc  network_router.h  system_router.cc  system_router.h
src/rtc/: CMakeLists.txt  h264_packetizer.cc  h264_packetizer.h  rtc_agent.cc  rtc_agent.h
src/system/: CMakeLists.txt  system_manager.cc  system_manager.h  system_manager_test.cc
src/utility/: CMakeLists.txt  caller.cc  caller.h  http.cc  http.h  net.cc  net.h  parser.cc  parser.h  plog.h  security.cc  security.h  time.cc  time.h  utility.h
